# special_topic

./: BLUEPRINT.md  README.md  blueprint.html  index.html  linear_algebra.html
Homework/260304while0p/: README.md
backup/hiwin_20260507/: README.md
dice_rps_game/: Form1.cs  Program.cs  README.md
docs/: README.md
docs/trends/: 2026-04-smart-grid-ai.md
hiwin/: DESIGN.md  PROJECT_INDEX.md  README.md  hiwin-todos.md  requirements.txt  verify_coord_consistency.py  verify_report.csv
hiwin/docs/: architecture.html  progress.html  table-geometry.html
hiwin/lib/: __init__.py  sim_table.py  state.py  table_geometry.py
hiwin/physics/: __init__.py  calibrator.py  collision.py  parameters.py  trajectory.py
hiwin/tests/: test_bank_shot_planner.py  test_calib_dependencies.py  test_camera.py  test_lib_physics.py  test_lib_state.py  test_lib_vision.py  test_physics.py  test_physics_validation.py  test_vision.py
hiwin/windows/: config.py  main.py
hiwin/wsl/: __init__.py  bank_shot_planner.py  config.py  coord_manager.py  protocol.py  robot_brain.py  (+3 more)
ic4/: .gitignore  README.md
midterm/: DiceForm.cs  MarqueeForm.cs  MatrixForm.cs  Midterm.csproj  PasswordLockForm.cs  PasswordStrengthForm.cs  Program.cs
opencodetest/: index.html  opencode-guide.html
physics/: physics.py
ros2-crossfloor-amr/: .gitignore  README.md
ros2-crossfloor-amr/src/crossfloor_nav/: package.xml
ros2-crossfloor-amr/src/crossfloor_nav/launch/: navigation.launch.py
wpf_pos/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  SPEC.md  WPF_POS.csproj  WPF_POS.sln
(+109 files in other folders)
